--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "vercel": "^48.8.0",
     "vite": "npm:rolldown-vite@7.1.12"
   },
   "overrides": {
